--- a/styleSheet_template.css
+++ b/styleSheet_template.css
@@ -5,6 +5,10 @@
 /* Colors */
 :root {
     --primary-color: #00549f;
+    --primary-color-dark: #002546;
+    --secondary-color: #cc071e;
+    --secondary-color-dark: #59020e;
+    --background-color: #222222
 }
 
 body, table, div, p, dl {
@@ -26,13 +30,25 @@ h1.groupheader {
 
 h2.groupheader {
 	border-bottom: 1px solid #879ECB;
-	color: var(--primary-color);
-	font-size: 150%;
-	font-weight: normal;
+	color: var(--primary-color-dark);
+	font-size: 200%;
+	font-weight: bold;
 	margin-top: 1.75em;
-	padding-top: 8px;
+	padding-top: 1em;
 	padding-bottom: 4px;
 	width: 100%;
+}
+
+tr.heading h2 {
+    font-size: 150%;
+    margin-top: 6px;
+    margin-bottom: 6px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
+h2.groupheader a {
+    margin-left: 1%;
 }
 
 h3.groupheader {
@@ -87,6 +103,19 @@ p.endtd {
 
 #main-menu {
     background-image: none;
+    /* border-bottom: 3px solid var(--background-color); */
+    /* box-shadow:         0 4px 2px rgba(0,0,0,0.2), 0 8px 4px rgba(0,0,0,0.1); */
+    /* -moz-box-shadow:    0 4px 2px rgba(0,0,0,0.2), 0 8px 4px rgba(0,0,0,0.1); */
+    /* -webkit-box-shadow: 0 4px 2px rgba(0,0,0,0.2), 0 8px 4px rgba(0,0,0,0.1); */
+    /* -o-box-shadow:      0 4px 2px rgba(0,0,0,0.2), 0 8px 4px rgba(0,0,0,0.1); */
+}
+
+#top {
+    border-bottom: 3px solid var(--background-color);
+    /* box-shadow:         0 4px 2px rgba(0,0,0,0.2), 0 8px 4px rgba(0,0,0,0.1); */
+    /* -moz-box-shadow:    0 4px 2px rgba(0,0,0,0.2), 0 8px 4px rgba(0,0,0,0.1); */
+    /* -webkit-box-shadow: 0 4px 2px rgba(0,0,0,0.2), 0 8px 4px rgba(0,0,0,0.1); */
+    /* -o-box-shadow:      0 4px 2px rgba(0,0,0,0.2), 0 8px 4px rgba(0,0,0,0.1); */
 }
 
 caption {
@@ -297,7 +326,7 @@ body {
 }
 
 #doc-content {
-    background-color: #222222;
+    background-color: var(--background-color);
     color: white;
 }
 
@@ -466,7 +495,7 @@ hr.footer {
 table.memberdecls {
 	border-spacing: 0px;
 	padding: 0px;
-    margin-top: 4px;
+    margin-top: 7px;
     background-color: white;
     box-shadow:         0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
     -moz-box-shadow:    0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
@@ -663,14 +692,14 @@ dl.reflist dd {
 }
 
 .paramname {
-	color: #602020;
+	color: var(--secondary-color-dark);
 	white-space: nowrap;
 }
 .paramname em {
 	font-style: normal;
 }
 .paramname code {
-        line-height: 14px;
+    line-height: 14px;
 }
 
 .params, .retval, .exception, .tparams {
@@ -713,7 +742,7 @@ span.mlabels {
 }
 
 span.mlabel {
-    background-color: #222222;
+    background-color: #444444;
     border: none;
     border-radius: 3px;
     text-shadow: none;
@@ -980,17 +1009,17 @@ table.fieldtable {
 	font-size: 13px;
 }
 
-.navpath ul
-{
+.navpath ul {
 	font-size: 11px;
     background-image: none;
 	height:30px;
 	line-height:30px;
-	color:#8AA0CC;
-	border:solid 1px #C2CDE4;
-	overflow:hidden;
-	margin:0px;
-	padding:0px;
+	color: black;
+	border: none;
+    border-top: 3px solid var(--background-color);
+	overflow: hidden;
+	margin: 0px;
+	padding: 0px;
 }
 
 .navpath li {
@@ -1021,18 +1050,17 @@ table.fieldtable {
     text-decoration: underline;
 }
 
-.navpath li.footer
-{
-        list-style-type:none;
-        float:right;
-        padding-left:10px;
-        padding-right:15px;
-        background-color: white;
-        background-image:none;
-        background-repeat:no-repeat;
-        background-position:right;
-        color:#364D7C;
-        font-size: 8pt;
+.navpath li.footer {
+    list-style-type:none;
+    float:right;
+    padding-left:10px;
+    padding-right:15px;
+    background-color: white;
+    background-image:none;
+    background-repeat:no-repeat;
+    background-position:right;
+    color:#364D7C;
+    font-size: 8pt;
 }
 
 
@@ -1093,70 +1121,56 @@ dl
 }
 
 /* dl.note, dl.warning, dl.attention, dl.pre, dl.post, dl.invariant, dl.deprecated, dl.todo, dl.test, dl.bug */
-dl.section
-{
-	margin-left: 0px;
-	padding-left: 0px;
+dl.section {
+    margin-left: 0px;
+    padding-left: 0px;
 }
 
-dl.note
-{
-        margin-left:-7px;
-        padding-left: 3px;
-        border-left:4px solid;
-        border-color: #D0C000;
+dl.note {
+    margin-left:-7px;
+    padding-left: 7px;
+    border: none;
 }
 
-dl.warning, dl.attention
-{
-        margin-left:-7px;
-        padding-left: 3px;
-        border-left:4px solid;
-        border-color: #FF0000;
+dl.warning, dl.attention {
+    background-color: #f6f6f6;
+    margin-left:-7px;
+    padding-left: 3px;
+    border-left: 4px solid #f70727;
 }
 
-dl.pre, dl.post, dl.invariant
-{
-        margin-left:-7px;
-        padding-left: 3px;
-        border-left:4px solid;
-        border-color: #00D000;
+dl.pre, dl.post, dl.invariant {
+    margin-left: -7px;
+    padding-left: 3px;
+    border-left: 4px solid #5eb82a;
 }
 
-dl.deprecated
-{
-        margin-left:-7px;
-        padding-left: 3px;
-        border-left:4px solid;
-        border-color: #505050;
+dl.deprecated {
+    margin-left:-7px;
+    padding-left: 3px;
+    border-left: 4px solid black;
 }
 
-dl.todo
-{
-        margin-left:-7px;
-        padding-left: 3px;
-        border-left:4px solid;
-        border-color: #00C0E0;
+dl.todo {
+    margin-left: -7px;
+    padding-left: 3px;
+    border-left: 4px solid #d4c300;
 }
 
-dl.test
-{
-        margin-left:-7px;
-        padding-left: 3px;
-        border-left:4px solid;
-        border-color: #3030E0;
+dl.test {
+    margin-left: -7px;
+    padding-left: 3px;
+    border-left: 4px solid #00549f;
 }
 
-dl.bug
-{
-        margin-left:-7px;
-        padding-left: 3px;
-        border-left:4px solid;
-        border-color: #C08050;
+dl.bug {
+    margin-left:-7px;
+    padding-left: 3px;
+    border-left: 4px solid #cc071e;
 }
 
 dl.section dd {
-	margin-bottom: 6px;
+    margin-bottom: 6px;
 }
 
 
@@ -1319,11 +1333,6 @@ div.toc li.level4 {
 
 .inherit {
         display: none;
-}
-
-tr.heading h2 {
-        margin-top: 12px;
-        margin-bottom: 4px;
 }
 
 /* tooltip related style info */
