--- a/styleSheet_template.css
+++ b/styleSheet_template.css
@@ -103,19 +103,10 @@ p.endtd {
 
 #main-menu {
     background-image: none;
-    /* border-bottom: 3px solid var(--background-color); */
-    /* box-shadow:         0 4px 2px rgba(0,0,0,0.2), 0 8px 4px rgba(0,0,0,0.1); */
-    /* -moz-box-shadow:    0 4px 2px rgba(0,0,0,0.2), 0 8px 4px rgba(0,0,0,0.1); */
-    /* -webkit-box-shadow: 0 4px 2px rgba(0,0,0,0.2), 0 8px 4px rgba(0,0,0,0.1); */
-    /* -o-box-shadow:      0 4px 2px rgba(0,0,0,0.2), 0 8px 4px rgba(0,0,0,0.1); */
 }
 
 #top {
-    border-bottom: 4px solid var(--background-color);
-    /* box-shadow:         0 4px 2px rgba(0,0,0,0.2), 0 8px 4px rgba(0,0,0,0.1); */
-    /* -moz-box-shadow:    0 4px 2px rgba(0,0,0,0.2), 0 8px 4px rgba(0,0,0,0.1); */
-    /* -webkit-box-shadow: 0 4px 2px rgba(0,0,0,0.2), 0 8px 4px rgba(0,0,0,0.1); */
-    /* -o-box-shadow:      0 4px 2px rgba(0,0,0,0.2), 0 8px 4px rgba(0,0,0,0.1); */
+    border-bottom: 1px solid #808080;
 }
 
 caption {
@@ -123,8 +114,8 @@ caption {
 }
 
 span.legend {
-        font-size: 70%;
-        text-align: center;
+    font-size: 70%;
+    text-align: center;
 }
 
 h3.version {
@@ -468,6 +459,52 @@ input.search {
 	background-color: #e8eef2;
 }
 */
+
+#MSearchBox {
+    border: solid 1px black;
+    display: table;
+    width: 300px;
+}
+
+#MSearchBox .left {
+    background-image: none;
+    display: table-cell;
+    vertical-align: middle;
+}
+
+#MSearchSelect {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+#MSearchField {
+    background-image: none;
+    display: table-cell;
+    vertical-align: middle;
+    width: 200%;
+}
+
+#MSearchBox .right {
+    background-image: none;
+    display: table-cell;
+    vertical-align: middle;
+}
+
+#MSearchSelectWindow {
+    background-color: white;
+    -webkit-border-radius: 0px;
+    border: solid 1px black;
+    box-shadow:         0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
+    -moz-box-shadow:    0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
+    -o-box-shadow:      0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
+}
+
+a.SelectItem:hover {
+    background-color: #d2d2d2;
+    color: black;
+}
+
 
 td.tiny {
 	font-size: 75%;
@@ -1092,16 +1129,16 @@ table.fieldtable {
 }
 
 .navpath ul {
-	font-size: 11px;
+    font-size: 11px;
     background-image: none;
-	height:30px;
-	line-height:30px;
-	color: black;
-	border: none;
-    border-top: 3px solid var(--background-color);
-	overflow: hidden;
-	margin: 0px;
-	padding: 0px;
+    height:30px;
+    line-height:30px;
+    color: black;
+    border: none;
+    border-top: 1px solid #808080;
+    overflow: hidden;
+    margin: 0px;
+    padding: 0px;
 }
 
 /* first navelems */
@@ -1205,7 +1242,7 @@ div.header {
     background-image: none;
     background-color: white;
     color: black;
-    margin: 0 0.5% 0.5% 0.5%;
+    margin: 0.5% 0.5% 0.5% 0.5%;
     align-items: center;
     justify-content: center;
 }
