--- a/styleSheet_template.css
+++ b/styleSheet_template.css
@@ -2,13 +2,15 @@
  * My own little style
  */
 
+/* TODO replace symbols for treeview (triangles) like paragraph sign */
+/* TODO resize handle: image with dots in the middle? */
+
 /* Colors */
-/* #550826 for primary? or lighter? combination with blue links? */
 :root {
-    --primary-color: #00549f;
-    --primary-color-dark: #002546;
-    --secondary-color: #cc071e;
-    --secondary-color-dark: #59020e;
+    --primary-color: #5f082b;
+    --primary-color-dark: #2c0414;
+    --secondary-color: #00549f;
+    --secondary-color-dark: #002546;
     --background-color: #222222
 }
 
@@ -142,9 +144,9 @@ div.navtab {
 /* @group Link Styling */
 
 a {
-	color: #3D578C;
-	font-weight: normal;
-	text-decoration: none;
+    color: var(--secondary-color);
+    font-weight: normal;
+    text-decoration: none;
 }
 
 .contents a:visited {
@@ -152,7 +154,7 @@ a {
 }
 
 a:hover {
-	text-decoration: underline;
+    text-decoration: underline;
 }
 
 a.qindex {
@@ -167,24 +169,19 @@ a.qindexHL {
 }
 
 .contents a.qindexHL:visited {
-        color: #ffffff;
+    color: #ffffff;
 }
 
-a.el {
-	font-weight: bold;
+a.el, a.el:visited {
+    font-weight: normal;
+    color: var(--secondary-color);
 }
 
-a.elRef {
+a.elRef, a.elRef:visited {
+    font-family: monospace;
+    color: #006bc8;
 }
-
-a.code, a.code:visited {
-	color: #5f9ea0;
-}
-
-a.codeRef, a.codeRef:visited {
-	color: #4665A2;
-}
-
+                              
 /* @end */
 
 dl.el {
@@ -192,24 +189,24 @@ dl.el {
 }
 
 pre.fragment {
-        border: 1px solid #C4CFE5;
-        /* background-color: #FBFCFD; */
-        background-color: red;
-        padding: 4px 6px;
-        margin: 4px 8px 4px 2px;
-        overflow: auto;
-        word-wrap: break-word;
-        font-size:  9pt;
-        line-height: 125%;
-        font-family: monospace, fixed;
-        font-size: 105%;
+    border: 1px solid #C4CFE5;
+    /* background-color: #FBFCFD; */
+    background-color: red;
+    padding: 4px 6px;
+    margin: 4px 8px 4px 2px;
+    overflow: auto;
+    word-wrap: break-word;
+    font-size:  9pt;
+    line-height: 125%;
+    font-family: monospace, fixed;
+    font-size: 105%;
 }
 
 div.fragment {
     padding: 0px;
     margin: 4px 8px 4px 2px;
     color: #bebebe;
-    background-color: #262626;
+    background-color: #323232;
     border: 5px solid #e8e8e8;
     border-radius: 3px;
 }
@@ -403,12 +400,22 @@ img.footer {
 /* @group Code Colorization */
 /* TODO Long lines in code view */
 
+
+a.code, a.code:visited {
+    color: #0075dc;
+}
+
+a.codeRef, a.codeRef:visited {
+    color: #0088ff;
+}
+ 
 span.keyword {
-    color: #b03060;
+    color: #9370db;
+    font-weight: bold;
 }
 
 span.keywordtype {
-    color: #d2691e;
+    color: #2fb497;
 }
 
 span.keywordflow {
@@ -759,6 +766,7 @@ dl.reflist dd {
     white-space: nowrap;
 }
 .paramname em {
+    /* TODO colour? */
     color: var(--secondary-color-dark);
     font-style: normal;
 }
