--- a/styleSheet_template.css
+++ b/styleSheet_template.css
@@ -558,14 +558,14 @@ table.memberdecls {
     background-color: white;
 }
 
-/* striped background for tables of members */
-.memberdecls tr[class^="memitem"]:nth-of-type(odd) {
-    background-color: #f6f6f6;
-}
+/* /\* striped background for tables of members *\/ */
+/* .memberdecls tr[class^="memitem"]:nth-of-type(odd) { */
+/*     background-color: #f6f6f6; */
+/* } */
 
-.memberdecls tr[class^="memitem"]:nth-of-type(odd) + tr[class^="memdesc"]  {
-    background-color: #f6f6f6;
-}
+/* .memberdecls tr[class^="memitem"]:nth-of-type(odd) + tr[class^="memdesc"]  { */
+/*     background-color: #f6f6f6; */
+/* } */
 
 /* all but last separator show a line */
 .memberdecls tr[class^="separator"]:not(:last-child) .memSeparator {
