--- a/styleSheet_template.css
+++ b/styleSheet_template.css
@@ -761,12 +761,43 @@ table.memberdecls {
 }
 
 dl.reflist dt {
-        padding: 5px;
+    padding: 5px;
+    z-index: 0;  /* cover the top shadow of dd */
+    position: relative;
+    -moz-box-shadow:    0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
+    -o-box-shadow:      0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
+    box-shadow:         0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
+}
+
+/* cover up the shadow at the bottom */
+dl.reflist dt::after {
+    content: " ";
+    width: 100%;
+    display: block;
+    height: 8px;
+    position: absolute;
+    background-color: #f6f6f6;
+    left: 0;
+    bottom: -8px;
 }
 
 dl.reflist dd {
-        margin: 0px 0px 10px 0px;
-        padding: 5px;
+    border-left: 4px solid var(--primary-color);
+    padding: 2px 1% 2px 1%;
+    margin: 8px 8px 24px 8px;
+    outline: 8px solid #f6f6f6;
+    -moz-box-shadow:    0 0 4px 8px rgba(0,0,0,0.35), 0 0 8px 8px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 0 4px 8px rgba(0,0,0,0.35), 0 0 8px 8px rgba(0,0,0,0.2);
+    -o-box-shadow:      0 0 4px 8px rgba(0,0,0,0.35), 0 0 8px 8px rgba(0,0,0,0.2);
+    box-shadow:         0 0 4px 8px rgba(0,0,0,0.35), 0 0 8px 8px rgba(0,0,0,0.2);
+}
+
+dl.reflist dd p::before {
+    font-size: 85%;
+    content: "\25B6\00A0\00A0";
+    /* height: 100%; */
+    display: inline-block;
 }
 
 .paramkey {
@@ -1258,16 +1289,16 @@ table.fieldtable {
     height: 30px;
     display: inline-block;
     float: left;
-    background-image: url("nav_edge.svg");
+    background-image: url("nav_edge_right.svg");
     background-repeat: no-repeat;
     background-position: right -1px;
     background-size: auto 100%;
 
     /* flip the element horizontally */
-    -moz-transform: scaleX(-1);
-    -o-transform: scaleX(-1);
+    -moz-transform:    scaleX(-1);
+    -o-transform:      scaleX(-1);
     -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
+    transform:         scaleX(-1);
     filter: FlipH;
     -ms-filter: "FlipH";
 }
