--- a/styleSheet_template.css
+++ b/styleSheet_template.css
@@ -210,6 +210,8 @@ div.fragment {
     background-color: #323232;
     border: 5px solid #e8e8e8;
     border-radius: 3px;
+    overflow: auto;
+    overflow-y: hidden;
 }
 
 div.line {
@@ -217,12 +219,7 @@ div.line {
     font-size: 13px;
     min-height: 13px;
     line-height: 1.0;
-    text-wrap: unrestricted;
-    white-space: -moz-pre-wrap; /* Moz */
-    white-space: -pre-wrap;     /* Opera 4-6 */
-    white-space: -o-pre-wrap;   /* Opera 7 */
-    white-space: pre-wrap;      /* CSS3  */
-    word-wrap: break-word;      /* IE 5.5+ */
+    white-space: nowrap;
     text-indent: -53px;
     padding-left: 53px;
     padding-bottom: 1px;
@@ -244,7 +241,8 @@ div.line:hover {
     background-color: #1a1a1a;
 }
 
-div.line:after {
+div.line::after {
+    /* insert linefeed */
     content:"\000A";
     white-space: pre;
 }
@@ -260,6 +258,7 @@ span.lineno {
     border-right: 3px solid #1d7567;
     background-color: #a0a0a0;
     color: black;
+    height: 100px;
     white-space: pre;
 }
 
@@ -288,21 +287,22 @@ span.lineno a:hover {
 }
 
 div.ah, span.ah {
-	background-color: black;
-	font-weight: bold;
-	color: #ffffff;
-	margin-bottom: 3px;
-	margin-top: 3px;
-	padding: 0.2em;
-	border: solid thin #333;
-	border-radius: 0.5em;
-	-webkit-border-radius: .5em;
-	-moz-border-radius: .5em;
-	box-shadow: 2px 2px 3px #999;
-	-webkit-box-shadow: 2px 2px 3px #999;
-	-moz-box-shadow: rgba(0, 0, 0, 0.15) 2px 2px 2px;
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#eee), to(#000),color-stop(0.3, #444));
-	background-image: -moz-linear-gradient(center top, #eee 0%, #444 40%, #000 110%);
+    background-color: black;
+    font-weight: bold;
+    color: #ffffff;
+    margin-bottom: 3px;
+    margin-top: 3px;
+    padding: 0.2em;
+    border: solid thin #333;
+    -webkit-border-radius: .5em;
+    -moz-border-radius: .5em;
+    border-radius: 0.5em;
+    -webkit-box-shadow: 2px 2px 3px #999;
+    -moz-box-shadow: 2px 2px 3px #999;
+    -o-box-shadow: 2px 2px 3px #999;
+    box-shadow: 2px 2px 3px #999;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#eee), to(#000),color-stop(0.3, #444));
+    background-image: -moz-linear-gradient(center top, #eee 0%, #444 40%, #000 110%);
 }
 
 div.classindex ul {
@@ -399,8 +399,6 @@ img.footer {
 }
 
 /* @group Code Colorization */
-/* TODO Long lines in code view */
-
 
 a.code, a.code:visited {
     color: #0075dc;
@@ -503,10 +501,10 @@ input.search {
     background-color: white;
     -webkit-border-radius: 0px;
     border: solid 1px black;
-    box-shadow:         0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
     -moz-box-shadow:    0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
     -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
     -o-box-shadow:      0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
+    box-shadow:         0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
 }
 
 a.SelectItem:hover {
@@ -548,10 +546,10 @@ table.memberdecls {
     padding: 0px;
     margin-top: 7px;
     background-color: white;
-    box-shadow:         0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
     -moz-box-shadow:    0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
     -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
     -o-box-shadow:      0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
+    box-shadow:         0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
 }
 
 .memberdecls tbody {
@@ -634,10 +632,10 @@ table.memberdecls {
     float: left;
     z-index: 0;
     position: relative;
-    box-shadow:         0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
     -moz-box-shadow:    0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
     -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
     -o-box-shadow:      0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
+    box-shadow:         0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
 }
 
 .permalink {
@@ -696,14 +694,14 @@ table.memberdecls {
     display: table !important;
     width: 100%;
     background-color: #f6f6f6;
-    box-shadow:         0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
     -moz-box-shadow:    0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
     -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
     -o-box-shadow:      0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
+    box-shadow:         0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
 }
 
 .memitem.glow {
-         box-shadow: 0 0 15px cyan;
+    box-shadow: 0 0 15px cyan;
 }
 
 .memname {
@@ -725,10 +723,10 @@ table.memberdecls {
     background-color: #f6f6f6;
     position: relative;
     z-index: 1;
-    box-shadow:         none;
     -moz-box-shadow:    none;
     -webkit-box-shadow: none;
     -o-box-shadow:      none;
+    box-shadow:         none;
 }
 
 .overload {
@@ -749,11 +747,11 @@ table.memberdecls {
     margin: 1%;
     background-color: white;
     background-image: none;
-    box-shadow:         none;
     -moz-box-shadow:    none;
     -webkit-box-shadow: none;
     -o-box-shadow:      none;
-
+    box-shadow:         none;
+    
     /* allow movement of elements inside */
     display: -webkit-box;
     display: -moz-box;
@@ -860,6 +858,9 @@ dl.reflist dd p::before {
 }
 
 .params tr, .tparams tr {
+    -moz-box-shadow: 0 -2px 0 -1px #606060;
+    -webkit-box-shadow: 0 -2px 0 -1px #606060;
+    -o-box-shadow: 0 -2px 0 -1px #606060;
     box-shadow: 0 -2px 0 -1px #606060;
 }
 
@@ -1163,8 +1164,9 @@ table.fieldtable {
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     border-radius: 4px;
-    -moz-box-shadow: rgba(0, 0, 0, 0.15) 2px 2px 2px;
+    -moz-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.15);
     -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.15);
+    -o-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.15);
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.15);
 }
 
