--- a/styleSheet_template.css
+++ b/styleSheet_template.css
@@ -525,24 +525,24 @@ blockquote {
 
 /* @end */
 
-/*
-.search {
-	color: #003399;
-	font-weight: bold;
-}
 
-form.search {
-	margin-bottom: 0px;
-	margin-top: 0px;
-}
+/* .search { */
+/* 	color: #003399; */
+/* 	font-weight: bold; */
+/* } */
 
-input.search {
-	font-size: 75%;
-	color: #000080;
-	font-weight: normal;
-	background-color: #e8eef2;
-}
-*/
+/* form.search { */
+/* 	margin-bottom: 0px; */
+/* 	margin-top: 0px; */
+/* } */
+
+/* input.search { */
+/* 	font-size: 75%; */
+/* 	color: #000080; */
+/* 	font-weight: normal; */
+/* 	background-color: #e8eef2; */
+/* } */
+
 
 .sm-dox > li:last-child {
     margin-right: 10pt;
@@ -551,39 +551,61 @@ input.search {
 #MSearchBox {
     border: 2px inset black;
     display: table;
-    width: 300px;
+    width: 350px;
     height: 26px;
     background: white;
-    margin-top: 6px;
+    margin-top: 5px;
+}
+
+/* override for when there is no main menu */
+nav > #MSearchBox {
+    border: 2px solid #666666;
+    margin: 5px 10pt 0 0;
+    height: 22px;
 }
 
 #MSearchBox .left {
     background-image: none;
     display: table-cell;
-    vertical-align: middle;
+    width: 100%;
+    height: inherit;
+    left: 0;
 }
 
-#MSearchSelect {
-    display: table-cell;
-    vertical-align: middle;
+#MSearchSelect, .left #MSearchSelect {
+    left: 0;
+    background-image: url("mag_glass.svg");
+    width: 22px;
+    height: 22px;
+    padding: 22px 22px 0 0 ;
+    margin: 0 4px 0 4px;
+    box-sizing: border-box;
 }
 
 #MSearchField {
     background-image: none;
     display: table-cell;
-    vertical-align: middle;
-    width: 200%;
+    margin: 0;
+    /* leave room for #MSearchSelect and a bit more for the border */
+    margin-left: 30px;
+    width: calc(100% - 34px);
+    height: 22px;
+    font: 11pt sans-serif;
 }
 
+/* don't need this */
 #MSearchBox .right {
     background-image: none;
-    display: table-cell;
-    vertical-align: middle;
+    width: 0;
+    display: none;
+    visibility: hidden;
 }
 
 #MSearchSelectWindow {
-    background-color: white;
-    -webkit-border-radius: 0px;
+    background-color: #414141;
+    padding: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;
     border: solid 1px black;
     -moz-box-shadow:    0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
     -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
@@ -591,9 +613,28 @@ input.search {
     box-shadow:         0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
 }
 
+a.SelectItem {
+    color: white;
+    padding: 3px 4px;
+    font: 10pt sans-serif;
+    letter-spacing: 1px;
+}
+
 a.SelectItem:hover {
-    background-color: #d2d2d2;
-    color: black;
+    background-color: var(--primary-color);
+    color: white;
+}
+
+a.SelectItem:focus, a.SelectItem:active {
+    color: white;
+}
+
+#MSearchResultsWindow {
+    background-color: white;
+    -moz-box-shadow:    0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
+    -o-box-shadow:      0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
+    box-shadow:         0 0 4px rgba(0,0,0,0.35), 0 0 8px rgba(0,0,0,0.2);
 }
 
 
@@ -1587,6 +1628,11 @@ dl.section dd {
     margin: 0px;
     width: 100%;
     border-bottom: none;
+}
+
+/* should only match if main menu is disabled (depends on javascripts in #top) */
+#titlearea:nth-last-child(2) {
+    border-bottom: 2px solid #444444;
 }
 
 .image
