--- a/styleSheet_template.css
+++ b/styleSheet_template.css
@@ -1531,52 +1531,61 @@ dl {
     padding: 0 0 0 10px;
 }
 
-/* dl.note, dl.warning, dl.attention, dl.pre, dl.post, dl.invariant, dl.deprecated, dl.todo, dl.test, dl.bug */
 dl.section {
     margin-left: 0px;
     padding-left: 0px;
 }
 
+dl.section > dt {
+    font-weight: bold;
+    font-family: sans-serif;
+}
+
+dl.note, dl.warning, dl.attention, dl.pre, dl.post, dl.invariant,
+dl.deprecated, dl.todo, dl.test, dl.bug {
+    margin-left: -7px;
+    padding-left: 3px;
+}
+
 dl.note {
-    margin-left:-7px;
     padding-left: 7px;
     border: none;
 }
 
-dl.warning, dl.attention {
-    background-color: #f6f6f6;
-    margin-left:-7px;
-    padding-left: 3px;
-    border-left: 4px solid #f70727;
+dl.warning {
+    background-color: #ffe6ea;
+    border: 1px solid #ff0728;
+    border-left: 4px solid #ff0728;
+    padding-top: 4px;
+    padding-bottom: 3px;
+}
+
+dl.attention {
+    border-left: 4px solid #ff0728;
 }
 
 dl.pre, dl.post, dl.invariant {
-    margin-left: -7px;
-    padding-left: 3px;
+    background-color: #f0ffe6;
+    border: 1px solid #5eb82a;
     border-left: 4px solid #5eb82a;
 }
 
 dl.deprecated {
-    margin-left:-7px;
-    padding-left: 3px;
+    background-color: #f6f6f6;
     border-left: 4px solid black;
 }
 
 dl.todo {
-    margin-left: -7px;
-    padding-left: 3px;
-    border-left: 4px solid #d4c300;
+    border-left: 4px solid #e8d500;
 }
 
 dl.test {
-    margin-left: -7px;
-    padding-left: 3px;
     border-left: 4px solid #00549f;
 }
 
 dl.bug {
-    margin-left:-7px;
-    padding-left: 3px;
+    background-color: #f6f6f6;
+    border: 1px solid #cc071e;
     border-left: 4px solid #cc071e;
 }
 
@@ -1584,6 +1593,10 @@ dl.section dd {
     margin-bottom: 6px;
 }
 
+.memdoc dl a.el {
+    font-weight: bold;
+    color: black;
+}
 
 #projectlogo
 {
