--- a/styleSheet_template.css
+++ b/styleSheet_template.css
@@ -60,16 +60,17 @@ h3.groupheader {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	-webkit-transition: text-shadow 0.5s linear;
-	-moz-transition: text-shadow 0.5s linear;
-	-ms-transition: text-shadow 0.5s linear;
-	-o-transition: text-shadow 0.5s linear;
-	transition: text-shadow 0.5s linear;
-	margin-right: 15px;
+    -webkit-transition: color 0.5s linear;
+    -moz-transition:    color 0.5s linear;
+    -ms-transition:     color 0.5s linear;
+    -o-transition:      color 0.5s linear;
+    transition:         color 0.5s linear;
+    margin-right: 15px;
 }
 
 h1.glow, h2.glow, h3.glow, h4.glow, h5.glow, h6.glow {
-	text-shadow: 0 0 15px cyan;
+    text-shadow: none;
+    color: var(--primary-color);
 }
 
 dt {
@@ -131,14 +132,14 @@ h3.version {
 }
 
 div.qindex, div.navtab{
-	background-color: #EBEFF6;
-	border: 1px solid #A3B4D7;
-	text-align: center;
+    background-color: white;
+    border: none;
+    text-align: center;
 }
 
 div.qindex, div.navpath {
-	width: 100%;
-	line-height: 140%;
+    width: 100%;
+    line-height: 140%;
 }
 
 div.navtab {
@@ -162,7 +163,8 @@ a:hover {
 }
 
 a.qindex {
-	font-weight: bold;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 a.qindexHL {
@@ -364,31 +366,34 @@ span.lineno a:hover {
 }
 
 div.ah, span.ah {
-    background-color: black;
-    font-weight: bold;
-    color: #ffffff;
+    background: none;
+    color: black;
     margin-bottom: 3px;
     margin-top: 3px;
     padding: 0.2em;
-    border: solid thin #333;
-    -webkit-border-radius: .5em;
-    -moz-border-radius: .5em;
-    border-radius: 0.5em;
-    -webkit-box-shadow: 2px 2px 3px #999;
-    -moz-box-shadow: 2px 2px 3px #999;
-    -o-box-shadow: 2px 2px 3px #999;
-    box-shadow: 2px 2px 3px #999;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#eee), to(#000),color-stop(0.3, #444));
-    background-image: -moz-linear-gradient(center top, #eee 0%, #444 40%, #000 110%);
+    
+    border: none;
+    -webkit-border-radius: 0;
+    -moz-border-radius:    0;
+    border-radius:         0;
+    
+    -webkit-box-shadow: none;
+    -moz-box-shadow:    none;
+    -o-box-shadow:      none;
+    box-shadow:         none;
+
+    font: 14pt monospace;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 div.classindex ul {
-        list-style: none;
-        padding-left: 0;
+    list-style: none;
+    padding-left: 0;
 }
 
 div.classindex span.ai {
-        display: inline-block;
+    display: inline-block;
 }
 
 div.groupHeader {
@@ -1103,6 +1108,10 @@ table.directory td.entry {
     border: none;
 }
 
+.directory td.entry .arrow {
+    color: black;
+}
+
 .directory td.desc {
     width: 100%;
     padding-left: 6px;
@@ -1135,7 +1144,11 @@ table.directory {
     cursor: pointer;
     padding-left: 2px;
     padding-right: 2px;
-    color: #3D578C;
+    color: var(--secondary-color);
+}
+
+.directory .levels span:hover {
+    text-decoration: underline;
 }
 
 .arrow {
@@ -1207,24 +1220,26 @@ table.directory {
 }
 
 .icon {
-    font-family: Arial, Helvetica;
+    font-family: monospace;
     font-weight: bold;
     font-size: 12px;
-    height: 14px;
-    width: 16px;
+    height: 15px;
+    width: 15px;
     display: inline-block;
-    background-color: #728DC1;
+    background-color: #444444;
     color: white;
     text-align: center;
-    border-radius: 4px;
-    margin-left: 2px;
-    margin-right: 2px;
+    border-radius: 3px;
+    margin: 0;
+    padding-top: 1px;
+    text-indent: -1px;
 }
 
 .icona {
-    width: 24px;
-    height: 22px;
-    display: inline-block;
+    width: 0;
+    height: 0;
+    display: none;
+    visibility: hidden;
 }
 
 .iconfopen {
@@ -1504,16 +1519,17 @@ div.summary a {
     white-space: nowrap;
 }
 
-table.classindex
-{
-        margin: 10px;
-        white-space: nowrap;
-        margin-left: 3%;
-        margin-right: 3%;
-        width: 94%;
-        border: 0;
-        border-spacing: 0;
-        padding: 0;
+table.classindex {
+    margin: 10px;
+    white-space: nowrap;
+    margin-left: 1%;
+    margin-right: 1%;
+    width: 98%;
+    border: none;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    border-spacing: 0.5em;
+    padding: 0;
 }
 
 div.ingroups {
