--- a/styleSheet_template.css
+++ b/styleSheet_template.css
@@ -419,12 +419,22 @@ body {
     color: white;
 }
 
+/* this is for individual member pages */
 div.contents {
+    margin: 0.5%;
+    color: black;
+    background-color: transparent;
+    padding: 0;
+}
+
+/* override for 'normal' mode */
+div.header + div.contents {
     margin: 0.5%;
     color: black;
     background-color: white;
     padding: 1%;
 }
+
 
 td.indexkey {
 	background-color: #EBEFF6;
@@ -816,11 +826,11 @@ table.memberdecls {
     padding: 0;
     margin-bottom: 10px;
     margin-right: 5px;
-    -webkit-transition: box-shadow 0.5s linear;
-    -moz-transition: box-shadow 0.5s linear;
-    -ms-transition: box-shadow 0.5s linear;
-    -o-transition: box-shadow 0.5s linear;
-    transition: box-shadow 0.5s linear;
+    -webkit-transition: none;
+    -moz-transition:    none;
+    -ms-transition:     none;
+    -o-transition:      none;
+    transition:         none;
     display: table !important;
     width: 100%;
     background-color: #f6f6f6;
@@ -890,6 +900,72 @@ table.memberdecls {
     -moz-box-orient: vertical;
     box-orient: vertical;
 }
+
+/* overrides for docs on individual pages */
+
+.memtitle:nth-child(2) {
+    background-color: white;
+    color: black;
+    margin: 0;
+    margin-bottom: 0.5%;
+    width: 100%;
+    
+    -webkit-border-radius: 0;
+    border-radius: 0;
+    
+    -moz-box-shadow:    none;
+    -webkit-box-shadow: none;
+    -o-box-shadow:      none;
+    box-shadow:         none;
+}
+
+.memitem:nth-child(3) {
+    margin: 0;
+    background-color: white;
+    -moz-box-shadow:    none;
+    -webkit-box-shadow: none;
+    -o-box-shadow:      none;
+    box-shadow:         none;
+}
+
+.memitem:nth-child(3) .memproto {
+    padding: 10px;
+    background-color: white;
+    margin-bottom: 10px;
+}
+
+.memitem:nth-child(3) .memproto::after {
+    content: "";
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    
+    background-color: black;
+    background: -webkit-linear-gradient(to right, white 0%, black 25%, black 75%, white 100%);
+    background: -o-linear-gradient(to right, white 0%, black 25%, black 75%, white 100%);
+    background: -moz-linear-gradient(to right, white 0%, black 25%, black 75%, white 100%);
+    background: linear-gradient(to right, white 0%, black 25%, black 75%, white 100%);
+}
+
+.memitem:nth-child(3) .memdoc {
+    border: none;
+    padding: 0;
+    /* margin: 0; */
+}
+
+.memitem:nth-child(3) table.memname {
+    background-color: #f6f6f6;
+    border-collapse: collapse;
+    border-spacing: initial;
+    border: 1px solid #aaa;
+}
+
+.memitem:nth-child(3) table.memname tr:not(:last-child) {
+    border-bottom: 1px dashed #aaa;
+}
+
 
 dl.reflist dt {
     padding: 5px;
@@ -1019,7 +1095,7 @@ td.mlabels-right {
 }
 
 span.mlabels {
-        margin-left: 8px;
+    margin-left: 8px;
 }
 
 span.mlabel {
